--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/analiticasDelGrupo.tmpl
@@ -7,8 +7,8 @@
 		
 		</script>
 		
-		<fieldset>
-		    <legend class="trigger trigger_analiticas_[% id2 %] click">[% "Anal&iacute;ticas del grupo" | i18n %] [% id2 %]</legend>
+		<fieldset class="trigger">
+		    <legend class="trigger trigger_analiticas_[% id2 %] click">[% "Anal&iacute;ticas" | i18n %]</legend>
 		    <div id="analiticasDelGrupo[% id2 %]" class="analiticasDelGrupo[% id2 %]" >
                         [% FOREACH nivel1_analiticas_array %]
 						<dl>  
