--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
@@ -4522,6 +4522,9 @@ body {
 .rightMargin{
 	margin-right: 5px;
 }
+ 
+ 
+/* LOADERS  */
 
 .ball {
 	background-color: transparent;
@@ -4599,6 +4602,87 @@ body {
 }
 
 
+.circle {
+    background-color: rgba(0,0,0,0);
+    border:5px solid rgba(0,183,229,0.9);
+    opacity:.9;
+    border-right:5px solid rgba(0,0,0,0);
+    border-left:5px solid rgba(0,0,0,0);
+    border-radius:50px;
+    box-shadow: 0 0 35px #2187e7;
+    width:50px;
+    height:50px;
+    margin:0 auto;
+    -moz-animation:spinPulse 1s infinite ease-in-out;
+    -webkit-animation:spinPulse 1s infinite linear;
+}
+.circle1 {
+    background-color: rgba(0,0,0,0);
+    border:5px solid rgba(0,183,229,0.9);
+    opacity:.9;
+    border-left:5px solid rgba(0,0,0,0);
+    border-right:5px solid rgba(0,0,0,0);
+    border-radius:50px;
+    box-shadow: 0 0 15px #2187e7; 
+    width:30px;
+    height:30px;
+    margin:0 auto;
+    position:relative;
+    top:-50px;
+    -moz-animation:spinoffPulse 1s infinite linear;
+    -webkit-animation:spinoffPulse 1s infinite linear;
+}
+@-moz-keyframes spinPulse {
+    0% { -moz-transform:rotate(160deg); opacity:0; box-shadow:0 0 1px #2187e7;}
+    50% { -moz-transform:rotate(145deg); opacity:1; }
+    100% { -moz-transform:rotate(-320deg); opacity:0; }
+}
+@-moz-keyframes spinoffPulse {
+    0% { -moz-transform:rotate(0deg); }
+    100% { -moz-transform:rotate(360deg);  }
+}
+@-webkit-keyframes spinPulse {
+    0% { -webkit-transform:rotate(160deg); opacity:0; box-shadow:0 0 1px #2187e7; }
+    50% { -webkit-transform:rotate(145deg); opacity:1;}
+    100% { -webkit-transform:rotate(-320deg); opacity:0; }
+}
+@-webkit-keyframes spinoffPulse {
+    0% { -webkit-transform:rotate(0deg); }
+    100% { -webkit-transform:rotate(360deg); }
+}
+
+.loading_items{
+	width: 800px;
+	margin: 0 auto;
+	padding-top: 50px;
+}
+
+#jqpageflow-block {
+    width: 600px;
+    clear: both;
+    margin: 0 auto;
+    display: none;
+}
+
+#jqpageflow-block img {
+    clear: both;
+}
+
+.jqpageflow-loader {
+    position: relative;
+    display: none;
+    right: 1%;
+    z-index: 10001;
+    bottom: 0;
+}
+
+.jqpageflow-loadertext {
+    font-size: 18px;
+    width: 100%;
+    text-align: center;
+    position: relative;
+}
+/* FIN LOADERS */
 
 /* FORM DE FILE UPLOAD */
 .fileUploader_catalogo form {
@@ -4696,3 +4780,18 @@ body {
 }
 /* FIN FORM DE FILE UPLOAD */
 
+.trigger{
+	background-color: whitesmoke;
+	border-radius: 2px;
+}
+
+.active{
+}
+
+.marked{
+	background-color: #F89406;
+}
+
+.table tbody tr:hover{
+	background-color: #F89406;
+}
