--- a/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/circulacionRapida.tmpl
@@ -368,7 +368,7 @@ $(document).ready(function() {
 <fieldset>
     <legend class="titulo_legend"><span class="titulos">[% 'Circulaci&oacute;n R&aacute;pida' | i18n %]</span></legend>
        <section class="center-section-form"> 
-        <form id="form_circulacion_rapida" class="classform form-horizontal">
+        <form id="form_circulacion_rapida" class="classform form-horizontal" onsubmit="return false;">
        <!-- <ul>-->
             <!--<li class="sub_item">-->
             <div class="control-group">
