--- a/intranet/htdocs/intranet-tmpl/circ/sancionesResult.tmpl
+++ b/intranet/htdocs/intranet-tmpl/circ/sancionesResult.tmpl
@@ -1,7 +1,7 @@
 
 <div class="contenedor_paginador">[% paginador %]</div>
 [% IF CANT_SANCIONES %]
-    <div class="resultados_consulta">[% "Cantidad de sanciones" | i18n %]: &nbsp;[% cant %]</div> 
+    <div class="well">[% "Cantidad de sanciones" | i18n %]: &nbsp;[% cant %]</div> 
     <table class="table table-striped" id="tablaResult">
         <thead> 
           <tr>
