--- a/intranet/htdocs/intranet-tmpl/reports/usuarios.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/usuarios.tmpl
@@ -6,25 +6,33 @@
 
 <script>
 
-	$(document).ready(function(){
-		$('#report_tabs').tab('show');
-	});
+    $(document).ready(function(){
+    });
 
 </script>
 
-<ul id="report_tabs" class="nav nav-tabs">
-  <li class="active">
-    <a href="#labels">[% 'Generar etiquetas' | i18n %]</a>
-  </li>
-  <li>
-    <a href="#registro">[% 'Registro de usuarios' | i18n %]</a>
-  </li>
-</ul>
- 
-<div id="report_tabsContent" class="tab-content">
-  <div class="tab-pane fade active" id="labels">[% INCLUDE 'partials/reportes/_reporte_usuarios.inc' %]</div>
-  <div class="tab-pane fade" id="registro">jsdnfjksdnfsdjfnksjdnfsdkjfnk </div>
+
+[% PERL %]
+    print C4::AR::Filtros::tabbedPane( titulo    => "[% 'Reportes de usuarios' | i18n %]",
+                                 subtitulo => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos reportes' | i18n %]",
+                                 content   => [ {id => 'labels', text=> "[% 'Generar etiquetas' | i18n %]" },
+                                                {id => 'registro', text => "[% 'Registro de usuarios' | i18n %]"},
+                                              ],
+                                 content_id=> ['reportes_usuarios'],
+                                 active_id => 'labels',
+    
+    );
+
+[% END %]
+
+        <div class="tab-pane fade in active" id="labels">
+            [% INCLUDE 'partials/reportes/_reporte_usuarios.inc' %]
+        </div>
+        <div class="tab-pane fade" id="registro">
+          <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
+        </div>
+      </div>
 </div>
 
-
 [% INCLUDE 'intranet-bottom.inc' %]
+
