--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleUsuario.tmpl
@@ -301,4 +301,4 @@ var loaderPath= "";
               </div><!--columna_der -->
 </fieldset>
 </div><!--vcard -->
-<div id="basic-modal-content"></div>
+<div id="basic-modal-content" class="modal hide fade"></div>
