--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/bootstrap.css
@@ -4541,12 +4541,30 @@ body {
 	-webkit-animation: spin .5s infinite linear;
 }
 
+.ball1 {
+	background-color: transparent;
+	border: 5px solid rgba(0, 183, 229, 0.9);
+	opacity: .9;
+	border-top: 5px solid transparent;
+	border-left: 5px solid transparent;
+	border-radius: 50px;
+	box-shadow: 0 0 15px #2187e7;
+	width: 30px;
+	height: 30px;
+	margin: 0 auto;
+	position: relative;
+	top: -50px;
+	-moz-animation: spinoff .5s infinite linear;
+	-webkit-animation: spinoff .5s infinite linear;
+}
+
 .loading {
 	background-color:#333;  
     border:1px solid #333;
     opacity:0.1;
 	width: 100px;
-	margin: 0 auto;    
+	margin: 0 auto;
+	margin-left: -4%;
 }
 
 .barlittle {
@@ -4615,6 +4633,9 @@ body {
     margin:0 auto;
     -moz-animation:spinPulse 1s infinite ease-in-out;
     -webkit-animation:spinPulse 1s infinite linear;
+    margin-top: 40%;
+        
+    
 }
 .circle1 {
     background-color: rgba(0,0,0,0);
