--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/detalleSanciones.tmpl
@@ -96,7 +96,7 @@ function updateBorrarSancion(responseText){
 </table>
 [% ELSE %]
 
-    <div class="alert alert-info">[% 'El usuario no tiene sanciones actualmente' | i18n %]</div>
+    <div class="alert alert-success">[% 'El usuario no tiene sanciones actualmente' | i18n %]</div>
 
 [% END %]
 </fieldset>
