--- a/intranet/htdocs/intranet-tmpl/informacion/error.tmpl
+++ b/intranet/htdocs/intranet-tmpl/informacion/error.tmpl
@@ -1,26 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<head>
-
-	[% IF page_sub_title %]
-	    <title>Meran::UNLP::[% page_sub_title %]</title>
-	[% ELSE %]
-	    <title>Meran::UNLP</title>
-	[% END %]
-	<link rel="stylesheet" type="text/css" href="[% temas %]/[% user_theme_intra %]/includes/intranet.css">
-
-</head>
-
-<body>
-
-<div class='tableMsgUser'>
-    <font class='fontMsgUser'>
-            <strong>
-            <div id='mensajes' class="mensajes_informacion">
-                [% message_error %]
-            </div>
-            </strong>
-    </font>
+<div class="alert alert-error">
+        <strong>Oh snap!</strong> [% message_error %]
 </div>
-
-</body>
