--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_importacion.tmpl
@@ -13,7 +13,7 @@
          $("#campo2").hide();
          $("#subcampo2").hide();
 
-//         makeToggle('tabbable','trigger',null,true);
+         makeToggle('tabbable','trigger',null,true);
 
          cargarCampoReglasMatcheo();
 
@@ -38,13 +38,13 @@ function eleccionSubCampo(){
 
 <div class="tabbable">
     <ul class="nav nav-tabs">
-    <li><a href="#1" data-toggle="tab">[% 'Acciones B&aacute;sicas' | i18n %]</a> </li>
+    <li  class="active" ><a  href="#1" data-toggle="tab">[% 'Acciones B&aacute;sicas' | i18n %]</a> </li>
     <li><a  href="#2" data-toggle="tab">[% 'B&uacute;squeda de registros en el Cat&aacute;logo' | i18n %]</a></li>
     <li><a  href="#3" data-toggle="tab">[% 'Relacion Registro/Ejemplar' | i18n %]</a></li>
     </ul>
     
    <div class="tab-content">
-    <div class="tab-pane" id="1">
+    <div class="tab-pane active" id="1">
 		    <label>[% 'Configurar Acciones' | i18n %]</label>
      <ol>
           <li class="sub_item">
