--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -116,21 +116,24 @@ var jobID = 0;
     }
 
 </script>
-
-<fieldset class="main">
-    <legend class="titulo_legend">[% "Personal:" | i18n %]</legend>
-    <ul>
-        <li class="item">
+<h1>[% 'Principal' | i18n %] <small>[% 'Accesos frecuentes, novedades, mensajes' | i18n %]</small></h1>
+<div class="well span4 " style="padding: 8px 0;">
+        <ul class="nav nav-list">
+          <li><a href="#"><i class="icon-home"></i>[% 'Accesos frecuentes' | i18n %]</a></li>
+          <li>
                     [% PERL %]
-                    print C4::AR::Filtros::link_to( text =>     "[% 'Mis datos' | i18n %]",
-                                                    url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl", 
-                                                    title =>    "[% 'Reportes' | i18n %]",
-                                                    params =>   ["nro_socio=[% nro_socio %]"],
-                            );
-                    [% END %]
-        </li>
-    </ul>
-</fieldset>
+                       print C4::AR::Filtros::link_to( text =>     "[% 'Mis datos' | i18n %]",
+                                                   url=>"[% url_prefix %]/usuarios/reales/datosUsuario.pl", 
+                                                   title =>    "[% 'Mis datos' | i18n %]",
+                                                   params =>   ["nro_socio=[% nro_socio %]"],
+                                                   icon => "icon-pencil",
+                                                   tooltip => "['Ver y/o modificar sus datos' | i18n ]"
+                           );
+                   [% END %]
+          </li>
+          <li><a href="#"><i class="i"></i> Misc</a></li>
+        </ul>
+    </div>        
 
 
 <div id="resultNovedades"></div>
@@ -139,7 +142,7 @@ var jobID = 0;
 
 [% IF twitter_enabled %]
 
-<div id="twitter_container">
+<div id="twitter_container" class="clear">
     [% IF twitter_username_to_search %]
 	   <div id="tweets" class="tweets"><div class="loading">[% 'Cargando tweets...' | i18n %]</div></div>
 	   <br />
