--- a/intranet/htdocs/intranet-tmpl/main.tmpl
+++ b/intranet/htdocs/intranet-tmpl/main.tmpl
@@ -136,9 +136,9 @@ var jobID = 0;
     </div>        
 
 
-<div id="resultNovedades"></div>
+<div id="resultNovedades" class="clear"></div>
 
-<div id="mensajes_contacto"></div>
+<div id="mensajes_contacto" class="clear"></div>
 
 [% IF twitter_enabled %]
 
